fixed two favorite lists bug and update button overlap

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,7 +29,7 @@ main {
     grid-template-areas:
         "weather-here-main-info weather-here-characteristics"
         "favorite-header add-new-city-form"
-        "favorite-left favorite-right";
+        "favorite-list favorite-list";
 }
 .weather-here-main-info {
     grid-area: weather-here-main-info;
@@ -40,11 +40,14 @@ main {
 .favorite-header {
     grid-area: favorite-header;
 }
-.favorite-left {
-    grid-area: favorite-left;
+#favorite-list {
+    display: flex;
+    flex-wrap: wrap;
+    grid-area: favorite-list;
 }
-.favorite-right {
-    grid-area: favorite-right;
+#favorite-list li {
+    flex-grow: 1;
+    min-width: 200px;
 }
 header, .grid-section {
     padding: 0 35px 20px;
@@ -188,7 +191,7 @@ ul {
 }
 
 /* adaptation to screen width */
-@media screen and (max-width: 870px), screen and (max-device-width: 650px) {
+@media screen and (max-width: 870px), screen and (max-device-width: 870px) {
     html {
         font-size: 16px;
     }
@@ -207,8 +210,10 @@ ul {
                 "weather-here-characteristics"
                 "favorite-header"
                 "add-new-city-form"
-                "favorite-left"
-                "favorite-right";
+                "favorite-list";
+    }
+    #favorite-list {
+        display: block;
     }
     header, .grid-section {
         padding: 0 20px 10px;
@@ -217,7 +222,8 @@ ul {
         padding-top: 20px;
     }
     .add-new-city-form form {
-        width: calc(100% - 70px);
+        right: 20px;
+        width: calc(100% - 40px);
     }
     #update-desktop-version {
         display: none;
@@ -242,5 +248,16 @@ ul {
     /* HACK: don't work without it don't know why */
     .weather-characteristic-value {
         font-size: 30px;
+    }
+}
+
+@media screen and (max-width: 400px), screen and (max-device-width: 400px) {
+    header {
+        display: block;
+    }
+    h1 {
+        position: static;
+        display: block;
+        margin-top: 10px;
     }
 }
